k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-manifest-washer
  namespace: k8s-manifest-washer
  labels:
    app: k8s-manifest-washer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: k8s-manifest-washer
